<resources>
    <string name="app_name">FLO</string>

    <!--Home Fragment-->
    <string name="home_title_today">오늘 발매 음악</string>
    <string name="home_today_all">종합</string>
    <string name="home_today_domestic">국내</string>
    <string name="home_today_overseas">해외</string>
    <string name="home_title_potcast">다채로운 오디오 즐기기</string>
    <string name="home_title_video">비디오 콜렉션</string>
    <string name="home_company_info">(주) 드림어스컴퍼니 사업자 정보</string>
    <string name="home_copyright">ⓒ DREAMUS CO., LTD.</string>

    <!--Look Fragment-->
    <string name="look_title">둘러보기</string>
    <string name="look_category_chart">차트</string>
    <string name="look_category_video">영상</string>
    <string name="look_category_genre">장르</string>
    <string name="look_category_situation">상황</string>
    <string name="look_category_mood">분위기</string>
    <string name="look_category_audio">오디오</string>
    <string name="look_flo_chart">FLO 차트</string>
    <string name="look_flo_chart_info">최근 24시간 집계, FLO 최고 인기곡 차트!</string>
    <string name="look_flo_chart_all_play">전체듣기</string>

    <!--Album Fragment-->
    <string name="album_track_list">수록곡</string>
    <string name="album_detail_info">상세정보</string>
    <string name="album_video">영상</string>
    <string name="album_my_mix">내 취향 MIX</string>
    <string name="album_playlist_all_select">전체선택</string>
    <string name="album_playlist_all_play">전체듣기</string>
    <string name="singer_itzy">ITZY (있지)</string>
    <string name="album_playlist_title_ic">TITLE</string>

    <!--Detail Fragment-->
    <string name="detail_label_title">앨범명</string>
    <string name="detail_label_artist">아티스트</string>
    <string name="detail_label_release_company">발매사</string>
    <string name="detail_label_main_company">기획사</string>
    <string name="detail_label_introduction">앨범소개</string>

    <!--Locker Fragment-->
    <string name="locker_title">보관함</string>
    <string name="locker_sign_in">로그인</string>
    <string name="locker_song_saved">저장한 곡</string>
    <string name="locker_song_file">음악파일</string>
    <string name="locker_song_saved_none">저장한 곡이 없습니다.</string>
    <string name="locker_song_file_none">음악파일이 없습니다.</string>

    <!--Order Dialog-->
    <string name="dialog_order_title">정렬 순서 변경</string>
    <string name="dialog_order_latest">최신순</string>
    <string name="dialog_order_popular">인기순</string>
    <string name="dialog_order_abc">가나다순</string>
</resources>