<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="18dp">

    <TextView
        android:id="@+id/dialog_order_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/dialog_order_title"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/dialog_btn_close_ib"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/btn_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_order_title_tv">

        <TextView
            android:id="@+id/dialog_order_latest_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_order_latest"
            android:textColor="@color/flo_blue"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/dialog_order_popular_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/dialog_order_popular"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/dialog_order_abc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/dialog_order_abc"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>